--- a/qtdesignerfiles/mainwindow.ui
+++ b/qtdesignerfiles/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>739</width>
-    <height>587</height>
+    <width>680</width>
+    <height>680</height>
    </rect>
   </property>
   <property name="contextMenuPolicy">
@@ -20,7 +20,13 @@
    <iconset>
     <normaloff>ui_files/icons/cup.png</normaloff>ui_files/icons/cup.png</iconset>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_2"/>
+    </item>
+   </layout>
+  </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
    <property name="contextMenuPolicy">
