--- a/qtdesignerfiles/druzyny.ui
+++ b/qtdesignerfiles/druzyny.ui
@@ -74,6 +74,13 @@
      </property>
     </widget>
    </item>
+   <item row="3" column="1" colspan="2">
+    <widget class="QPushButton" name="pushButton_losuj_drzewko">
+     <property name="text">
+      <string>Losuj drzewko</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
