--- a/qtdesignerfiles/bracket_widget.ui
+++ b/qtdesignerfiles/bracket_widget.ui
@@ -14,7 +14,7 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="1" column="0">
     <widget class="QScrollArea" name="scrollArea">
      <property name="widgetResizable">
       <bool>true</bool>
@@ -25,7 +25,7 @@
         <x>0</x>
         <y>0</y>
         <width>524</width>
-        <height>473</height>
+        <height>444</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
@@ -34,6 +34,13 @@
        </item>
       </layout>
      </widget>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Następny mecz</string>
+     </property>
     </widget>
    </item>
   </layout>
