--- a/qtdesignerfiles/okno_druzyny.ui
+++ b/qtdesignerfiles/okno_druzyny.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>342</width>
-    <height>211</height>
+    <width>300</width>
+    <height>377</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -50,7 +50,7 @@
      <property name="title">
       <string>Dane drużyny</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
+     <layout class="QGridLayout" name="gridLayout_4">
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
@@ -72,22 +72,137 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QListWidget" name="listWidget"/>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Liczba wygranych:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLabel" name="label_liczba_wygranych">
+        <property name="text">
+         <string>wygrane</string>
+        </property>
+       </widget>
       </item>
       <item row="2" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Liczba przegranych:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="label_liczba_przegranych">
+        <property name="text">
+         <string>przegrane</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Zdobyte punkty:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QLabel" name="label_zdobyte_punkty">
+        <property name="text">
+         <string>zdobyte_punkty</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>Stracone punkty:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLabel" name="label_stracone_punkty">
+        <property name="text">
+         <string>stracone_punkty</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Lista zawodników:</string>
         </property>
        </widget>
       </item>
+      <item row="5" column="1">
+       <widget class="QListWidget" name="listWidget"/>
+      </item>
+      <item row="6" column="0" colspan="2">
+       <widget class="QGroupBox" name="groupBox_3">
+        <property name="title">
+         <string>Statystyki zawodnika:</string>
+        </property>
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>Zdobyte punkty:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>Stracone punkty:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_10">
+           <property name="text">
+            <string>Rozegrane mecze:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLabel" name="label_stracone_punkty_zawodnik">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLabel" name="label_rozegrane_mecze">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLabel" name="label_zdobyte_punkty_zawodnik">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
      </layout>
-     <zorder>listWidget</zorder>
      <zorder>listWidget</zorder>
      <zorder>label_2</zorder>
      <zorder>label</zorder>
      <zorder>label_3</zorder>
+     <zorder>label_4</zorder>
+     <zorder>label_liczba_wygranych</zorder>
+     <zorder>label_5</zorder>
+     <zorder>label_liczba_przegranych</zorder>
+     <zorder>label_6</zorder>
+     <zorder>label_zdobyte_punkty</zorder>
+     <zorder>label_7</zorder>
+     <zorder>label_stracone_punkty</zorder>
+     <zorder>groupBox_3</zorder>
     </widget>
    </item>
   </layout>
