--- a/qtdesignerfiles/wczytaj_z_bazy.ui
+++ b/qtdesignerfiles/wczytaj_z_bazy.ui
@@ -38,7 +38,11 @@
        <widget class="QLineEdit" name="lineEdit_6"/>
       </item>
       <item row="8" column="1">
-       <widget class="QLineEdit" name="lineEdit_7"/>
+       <widget class="QLineEdit" name="lineEdit_7">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
       </item>
       <item row="9" column="0" colspan="2">
        <widget class="QPushButton" name="pushButton">
